fix letter-spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,7 +271,7 @@ nav ul li a {
 .header-content p {
   padding-top: 60%;
   font-size: 13px;
-  letter-spacing: 5px;
+  letter-spacing: 2px;
   margin-top: 0;
   margin-bottom: 30px;
   text-transform: capitalize;
